# Lab_7

./: .gitmodules  README.md
docker/: melodic_dockerfile.Dockerfile  noetic_dockerfile.Dockerfile
src/: controls_lab_ur3_calib.yaml  ur3e2_calib.yaml
src/Universal_Robots_ROS_Driver/ur_robot_driver/launch/: ur3e_bringup.launch  ur_common.launch
src/fmauch_universal_robot/ur_description/launch/: load_ur.launch  load_ur3e.launch
src/fmauch_universal_robot/ur_description/urdf/: ur.xacro
src/moveit_tutorial/: CMakeLists.txt  package.xml  tutorial_pose.csv
src/moveit_tutorial/src/: tutorial.cpp
src/moveit_wrapper/include/moveit_wrapper/: moveit_imports.hpp
src/moveit_wrapper/src/: arm_controller.cpp
src/my_ur/: CMakeLists.txt  package.xml
src/my_ur/urdf/: model (original).urdf  model.urdf  model1.urdf  ur3e.urdf.xacro  ur3e_hande_integration.xacro
src/my_ur/world/: ur3eworld
src/my_ur/world/Untitled/: model.sdf
src/my_ur/world/ur3e-world/: model.config  model.sdf
src/ur3e_custom_moveit_package_4/: .setup_assistant  CMakeLists.txt  package.xml
src/ur3e_custom_moveit_package_4/config/: fake_controllers.yaml  my_ur3e.srdf  ompl_planning.yaml  ros_controllers.yaml  simple_moveit_controllers.yaml  stomp_planning.yaml
src/ur3e_custom_moveit_package_4/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  demo_gazebo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  ompl-chomp_planning_pipeline.launch.xml  ompl_planning_pipeline.launch.xml  planning_context.launch  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  simple_moveit_controller_manager.launch.xml  stomp_planning_pipeline.launch.xml
src/ur3e_moveit_mrc/: README.md
src/ur3e_moveit_mrc/config/: kinematics.yaml  ros_controllers.yaml  ur3e.srdf
src/ur3e_moveit_mrc/launch/: move_group.launch  ur3e_moveit.launch
src/ur3e_setup/: README.md
src/ur3e_setup/launch/: setup.launch  ur3e_gazebo.launch
src/ur3e_setup/launch/inc/: load_ur3e_mrc.launch.xml
src/ur3e_setup/src/: scene_setup.cpp
src/ur3e_setup/urdf/: ur_mrc_gazebo.xacro
src/ur3e_trajectory/: CMakeLists.txt  package.xml
src/ur3e_trajectory/config/: params.yaml
src/ur3e_trajectory/launch/: load_params.launch
src/ur3e_trajectory/src/: RecordPose.cpp  circle.cpp  circle_horizontal.cpp  circle_vertical.cpp  square.cpp  square_horizontal.cpp  square_vertical.cpp
